adaptive menu fix

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </div>
               <button class="btn_header">Заказать</button>
             </div>
-            <div class="header__burger-btn"> <span></span><span></span><span></span></div>
+            <div class="header__burger-btn"><span></span><span></span><span></span></div>
           </div>
           <div class="container__menu">
             <ul class="nav">
@@ -952,6 +952,7 @@
           </div>
         </div>
       </footer>
+      <!--include ../modules/menuGlobal-->
     </div>
     <script src="static/js/libs.min.js"></script>
     <script src="static/js/main.min.js"></script>
